<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.savonius.bteenergy.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        />
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:title="@string/action_connect"
        />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        />
    <item
        android:id="@+id/action_historico"
        android:orderInCategory="100"
        android:title="@string/action_historico"
        />
    <item
        android:id="@+id/action_settime"
        android:orderInCategory="100"
        android:title="@string/action_settime"
        />
    
</menu>
